--- a/package.json
+++ b/package.json
@@ -7,6 +7,18 @@
   },
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test:unit && npm run test:bdd",
+    "test:unit": "mocha test/unit/**/*.test.js --recursive",
+    "test:bdd": "cucumber-js test/features/**/*.feature --import test/features/step_definitions/**/*.js --format progress",
+    "test:watch": "mocha test/unit/**/*.test.js --recursive --watch",
+    "test:coverage": "c8 npm test"
   },
+  "devDependencies": {
+    "@cucumber/cucumber": "^10.0.0",
+    "c8": "^8.0.1",
+    "chai": "^4.3.8",
+    "mocha": "^10.2.0",
+    "sinon": "^15.2.0",
+    "sinon-chai": "^3.7.0"
+  }
 }
